# sgr_tretyak

./: .gitignore  GROUPER.md  Makefile  POSSIBLE_IMPROVEMENTS.md  README.md  REFACTORING.md  REQUEST_SCHEMA.md  RULES.md  SGR.md  agents.yaml  config.yaml  example.md  main.py  pyproject.toml
agent_notes/: 1_better_grouping.md
scripts/: 0_simple_example_agent.py  1_extract_people.py  2_structured_entities_example.py  3_ner_rus.py  answers.json  check_structured_output.py  copy_sample_images.py  validate_pipeline.py
src/: cli.py  config.py  llm_client.py  llm_prompts.py  models.py
src/tools/: blocking.py  cluster_people.py  embedding_index.py  mention_extractor.py  mention_grouper.py  name_normalizer.py  ner_provider.py  note_linker.py  note_metadata.py  note_naming.py  people_extractor.py  person_blocking.py  person_candidates.py  person_matcher.py  person_note_generator.py  pipeline_trace.py  scan_people.py  validation.py
src/utils/: logging_utils.py
tests/: conftest.py  test_cluster_people.py  test_confidence_bucket.py  test_mention_extraction.py  test_mention_grouping.py  test_metadata_validation.py  test_people_extraction.py  test_people_two_pass.py  test_role_in_matching.py  test_validation.py
tests/samples/pages/: 0000.md  0000_expected.json  157163.md  157163_expected.json  8331.md  8331_expected.json  8360.md  8360_expected.json
